# prevue

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: prevue.yml
.github/scripts/: install-engine-cli.sh
.github/workflows/: ci.yml  prevue-command-run.yml  prevue-command.yml  prevue-review.yml  review.yml  test.yml  update-pricing.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  (+1 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md  configuration.md  consumer-setup.md  security.md  skills.md
scripts/: ci-local.sh
tests/: conftest.py  engine_helpers.py  test_checks.py  test_classify_classifier.py  test_classify_filter.py  test_classify_router.py  test_classify_rules.py  test_cli.py  test_client.py  test_commands.py  test_comments.py  test_config.py  test_config_precedence.py  test_copilot_adapter.py  test_diff.py  test_dismiss.py  test_engine_config_pricing.py  test_engine_contract.py  test_engine_flow.py  test_findings_parsing.py  test_fingerprint.py  test_fork_guard.py  test_gate.py  test_gate_validate.py  test_graphql.py  test_importscan.py  test_injection_adversarial.py  test_llm_fallback.py  test_model_roles.py  test_models.py  test_multicall.py  test_output_contract.py  test_pack.py  test_positions.py  test_preflight.py  test_pricing.py  test_prompt.py  test_raw_args.py  test_registry.py  test_reusable_workflow_yaml.py  (+10 more)
uat/: ACTIVE  README.md  switch-scenario.sh
(+336 files in other folders)
